Nexmo SMS Csv content

--- a/agile-frontend/WebContent/locales/csv/i18n.csv
+++ b/agile-frontend/WebContent/locales/csv/i18n.csv
@@ -6101,3 +6101,19 @@ widgets.linkedin-info-login,to show search results and profiles in your linkedin
 widgets.linkedin-browser-info,Browser not supported. Please use or install chrome browser to enable linkedin widget,,,,,,,,,,,,,
 widgets.install-plugin,AgileCRM linkedin plugin not installed. Please install the plugin to enable linkedin widget,,,,,,,,,,,,,
 widgets.linkedin-data-sync-success,Linkedin data synced successfully,,,,,,,,,,,,,
+widgets.Nexmo-content,Send message using nexmo account.,
+widgets.Nexmo-name,Nexmo,,,,,,,,,,,,,,
+widgets.Nexmo-content-new,Send SMS.,
+widgets.enter-nexmo-widget-details,Enter your Nexmo details.,,
+widgets.nexmo-numbers,Nexmo Number.,,
+admin-settings-integrations.api-key,API KEY.,
+admin-settings-prefs.api-screte,SCRETE Key.,,,
+widgets.verified-nexmo-caller-ids,Verified Sender IDs.,
+widgets.verified-nexmo-caller-ids-tooltip,Number from which sms will send.,
+widgets.verified-nexmo-caller-ids-tooltip-new,Number from which sms will send.,,,
+widgets.nexmo-tooltip,Log into your Nexmo Account. On the Dashboard there you will find your Account API Key and Secret Key. Copy those values and paste them into the Api Key and secret key fields.,
+twill.select-nexmo-number,Select a Nexmo number.,
+widgets.api-key-validation,Account API Key starts with d5 and length should be more then 5.,
+widgets.secret-key-validation,Secret Key length should be more then 5.,
+widgets.widget-nexmo-error,Please Enter the valid Api key and Secret key.
+widgets.saved-nexmo-success,Nexmo widget saved.
