Adding company name to template

--- a/agile-frontend/WebContent/locales/csv/i18n.csv
+++ b/agile-frontend/WebContent/locales/csv/i18n.csv
@@ -5942,5 +5942,5 @@ widgets.twilio-numbers-tooltip,Number to receive call in Agile,,,,,,,,,,,,,
 widgets.verified-caller-ids-tooltip,Number from which call is made.,,,,,,,,,,,,,
 widgets.manage-voicemails-tooltip,"Play pre-recorded audio file to customer when call gets connected,just on click of button.",,,,,,,,,,,,,
 twill.error-start-transfer,Problem in call transfer. Please try again.,,,,,,,,,,,,,
-tickets.minimal_template,Basic,,,
+tickets.minimal_template,Minimalistic,,,
 tickets.default_template,Default,,,
